--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Puzzles By Taha</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
- 
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://kit.fontawesome.com/8a2bd81df1.js" crossorigin="anonymous"></script>
+    <title>Puzzles By Taha</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+  </head>
+  <body>
     <div class="topnav">
-        <a class="active" href="index.html"><b>Home</b></a>
-        <a href="about.html"><b>About</b></a>
+      <a  href="index.html"><b>Home</b></a>
+      <a href="about.html"><b>How to play?</b></a>
+      <button class="sound" ><i class="fa-solid fa-volume-high fa-lg"></i></button>
+    </div>
+    <div class="split left">
+      <div class="centered">
+        <img src="./LionKing/AvatarLionKing.jpeg" alt="AvatarLionKing" />
+        <a href="lionKing.html"><b>PLAY PUZZLE</b></a>
       </div>
-      <div class="split left">
-        <div class="centered">
-          <img src="./LionKing/AvatarLionKing.jpeg" alt="AvatarLionKing">
-          <a href="lionKing.html"><b>PLAY PUZZLE</b></a>
+    </div>
 
-        </div>
+    <div class="split right">
+      <div class="centered">
+        <img src="./PerterPan/avatarPeterPan.jpg" alt="avatarPeterPan" />
+        <a href="peterPan.html"><b>PLAY PUZZLE</b></a>
       </div>
-      
-      <div class="split right">
-        <div class="centered">
-          <img src="./PerterPan/avatarPeterPan.jpg" alt="avatarPeterPan">
-          <a href="peterPan.html"><b>PLAY PUZZLE</b></a>
-        </div>
-      </div>
- 
-</body>
-<script src="main.js"></script>
+    </div>
+    <audio></audio>
+  </body>
+  <script src="main.js"></script>
 </html>
