--- a/lionKing.html
+++ b/lionKing.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://kit.fontawesome.com/8a2bd81df1.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/8a2bd81df1.js"
+      crossorigin="anonymous"
+    ></script>
     <title>LionKing By Taha</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -12,8 +15,12 @@
   <body>
     <div class="topnav">
       <a href="index.html"><b>Home</b></a>
-      <a href="about.html"><b>How to play?</b></a>
-      <button class="sound" ><i class="fa-solid fa-volume-high fa-lg"></i></button>
+      <a href="about.html"><b>About</b></a>
+      <button id="signup"><b>Sign Up</b></button>
+      <button class="login"><b>Login</b></button>
+      <button class="sound">
+        <i class="fa-solid fa-volume-high fa-lg"></i>
+      </button>
     </div>
     <div class="centered" id="lion">
       <img src="./LionKing/LionKing.jpg" alt="LionKing" />
@@ -23,10 +30,8 @@
       <img id="gif" src="LionKing/LKing.gif" alt="lionkingif" />
       <p></p>
     </div>
-
     <div id="gameMode">
-      <div id="watch" class="centered">0
-      </div>
+      <div id="watch" class="centered">0</div>
       <ul id="sortable">
         <li id="y1"></li>
         <li id="y2"></li>
