--- a/about.html
+++ b/about.html
@@ -3,31 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/8a2bd81df1.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/8a2bd81df1.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
       crossorigin="anonymous"
     ></script>
-    <script src=""></script>
-    <title>Document</title>
+    <title>About</title>
   </head>
   <body>
     <div class="topnav">
       <a href="index.html"><b>Home</b></a>
-      <a href="about.html"><b>How to play?</b></a>
-      <button class="sound" ><i class="fa-solid fa-volume-high fa-lg"></i></button>
+      <a href="about.html"><b>About</b></a>
+      <button id="signup"><b>Sign Up</b></button>
+      <button class="login"><b>Login</b></button>
+      <button class="sound">
+        <i class="fa-solid fa-volume-high fa-lg"></i>
+      </button>
     </div>
-    <table id='scores' class="centered">
-      <tr>
-        <th><b>NAME</b></th>
-        <th><b>SCORE</b></th>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
+    <div class="about">
+      <h1>This Puzzle game is made by <br />Mohammed Taha Boughanmi</h1>
+      <button class="HTP"><h2>How to play?</h2></button>
+      <p class="PHTP">
+        when you click on <b><i>play puzzle</i></b
+        >: <br />
+        the puzzle image will be shown to you once and then pices will be
+        shuffled.
+        <br />you have to drag every piece to its position to complete the
+        puzzle <br />
+        Good Luck !
+      </p>
+    </div>
     <audio></audio>
   </body>
   <script src="main.js"></script>
